# google_test_project

./: README.md
google_test_project/: CMakeLists.txt  README.md  main.cpp
google_test_project/basic_examples/: CMakeLists.txt
google_test_project/basic_examples/lib/: lib_a.cpp  lib_a.h
google_test_project/basic_examples/unittest/: unittests.cpp
google_test_project/lib/: lib_a.cpp  lib_a.h
google_test_project/mock_examples/: CMakeLists.txt  main.cpp
google_test_project/mock_examples/lib/: employee.h  employee_manager.cpp  employee_manager.h  idatabase_connection.cpp  idatabase_connection.h
google_test_project/mock_examples/unittest/: unittests.cpp
google_test_project/unittest/: unittests.cpp
